fix some layout issues on blog

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,10 @@ main p {
 		padding: 0px;
 	}
 
+.blog section {
+	overflow: auto;		/* !!! important if floating image is smaller than text */
+}
+
 .main_l {
 	width: 45%;
 	float: left;
@@ -134,6 +138,8 @@ hr {
 
 hr.blog {
 	height: 2px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 footer {
